# fotmoby

./: .gitignore  README.md  setup.cfg
src/: FotMob.py
src/FotMoby/: FotMoby.py
tests/: test.py
