[metadata]
name = fotmoby
version = 0.0.4
author = Venkat Ramana Reddy
author_email = venkat_ramana@outlook.com
description = An unofficial FotMob API wrapper for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/venkatramanareddy/fotmoby
project_urls =
    Bug Tracker = https://github.com/venkatramanareddy/fotmoby/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
